# fastapiauthexample

./: .gitignore  README.md  pyproject.toml  test.db
app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
app/routers/: auth_routes.py  protected.py  role.py  users.py
